Create config files and refactor files to .example

--- a/configs/nginx/sites-enabled/load_balancer.example
+++ b/configs/nginx/sites-enabled/load_balancer.example
@@ -1,6 +1,6 @@
 upstream backend {
-    server 192.168.68.55;  # apache1
-    server 192.168.68.57;  # apache2
+    server 192.168.XX.XX;  # apache1
+    server 192.168.XX.XX;  # apache2
 }
 
 server {
