--- a/configs/netplan/apache1/01-netcfg.yaml.example
+++ b/configs/netplan/apache1/01-netcfg.yaml.example
@@ -4,7 +4,7 @@ network:
   ethernets:
     enp0s3:
       dhcp4: no
-      addresses: [192.168.XX.XX/YY]
-      gateway4: 192.168.XX.1
+      addresses: [192.168.68.55/22]
+      gateway4: 192.168.68.1
       nameservers:
         addresses: [8.8.8.8, 1.1.1.1]
