--- a/configs/netplan/mysql-master/01-netcfg-second.yaml.example
+++ b/configs/netplan/mysql-master/01-netcfg-second.yaml.example
@@ -1,13 +1,15 @@
+
 network:
   version: 2
   renderer: networkd
   ethernets:
     enp0s3:
       dhcp4: no
-      addresses: [192.168.68.58/22]
+      addresses: [192.168.0.100/24]
       gateway4: 192.168.0.1
       nameservers:
         addresses: [8.8.8.8, 1.1.1.1]
     enp0s8:
       dhcp4: no
-      addresses: [192.168.56.101/24]
+      addresses:
+        - 192.168.56.101/24
